tests/reject/optionalWrongArgument.emojic
🐇 🐟 🍇
  🖍🆕 name 🔡

  🆕 🍼 name 🔡 🍇🍉

  ❗️ 🙋 🍇
    😀 name❗️
  🍉
🍉

🏁 🍇
  🖍🆕 name 🍬🔡
  🆕🐟🆕 name❗️ ➡️ fish
  🙋 fish❗️
🍉
